--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "1.0.0",
   "description": "API de Pokemon con autenticación JWT",
   "main": "server.ts",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node server.ts",
+    "dev": "tsx server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.24",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.23",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "keywords": [],
